:art: Structure solution and folders

--- a/Graphy/Graphy.vcxproj
+++ b/Graphy/Graphy.vcxproj
@@ -132,15 +132,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="E:\Users\volard\OpenGL\libs\imgui\imgui.cpp" />
-    <ClCompile Include="E:\Users\volard\OpenGL\libs\imgui\imgui_demo.cpp" />
-    <ClCompile Include="E:\Users\volard\OpenGL\libs\imgui\imgui_draw.cpp" />
-    <ClCompile Include="E:\Users\volard\OpenGL\libs\imgui\imgui_impl_glfw.cpp" />
-    <ClCompile Include="E:\Users\volard\OpenGL\libs\imgui\imgui_impl_opengl3.cpp" />
-    <ClCompile Include="E:\Users\volard\OpenGL\libs\imgui\imgui_tables.cpp" />
-    <ClCompile Include="E:\Users\volard\OpenGL\libs\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="glad.c" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Sources\glad\glad.c" />
+    <ClCompile Include="Sources\imgui\imgui.cpp" />
+    <ClCompile Include="Sources\imgui\imgui_demo.cpp" />
+    <ClCompile Include="Sources\imgui\imgui_draw.cpp" />
+    <ClCompile Include="Sources\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="Sources\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="Sources\imgui\imgui_tables.cpp" />
+    <ClCompile Include="Sources\imgui\imgui_widgets.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="E:\Users\volard\OpenGL\includes\imgui\imconfig.h" />
@@ -151,6 +151,10 @@
     <ClInclude Include="E:\Users\volard\OpenGL\includes\imgui\imstb_rectpack.h" />
     <ClInclude Include="E:\Users\volard\OpenGL\includes\imgui\imstb_textedit.h" />
     <ClInclude Include="E:\Users\volard\OpenGL\includes\imgui\imstb_truetype.h" />
+    <ClInclude Include="Includes\glad\glad.h" />
+    <ClInclude Include="Includes\GLFW\glfw3.h" />
+    <ClInclude Include="Includes\GLFW\glfw3native.h" />
+    <ClInclude Include="Includes\KHR\khrplatform.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
