--- a/Graphy/imgui.ini
+++ b/Graphy/imgui.ini
@@ -5,10 +5,38 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-ViewportPos=299,264
+ViewportPos=1209,79
 ViewportId=0xEBE6C6E6
-Size=460,632
+Size=458,178
 Collapsed=0
+
+[Window][NodeSoup]
+ViewportPos=70,181
+ViewportId=0x7E025615
+Size=800,600
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+ViewportPos=823,176
+ViewportId=0xE927CF2F
+Size=585,680
+Collapsed=0
+
+[Table][0xDA36A7E0,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=42
+Column 3  Weight=1.0000
 
 [Docking][Data]
 
