--- a/Graphy/Graphy.vcxproj.filters
+++ b/Graphy/Graphy.vcxproj.filters
@@ -60,6 +60,21 @@
     <ClCompile Include="Sources\glad\glad.c">
       <Filter>Source Files\glad</Filter>
     </ClCompile>
+    <ClCompile Include="..\Solution Items\ImNodeSoup\fruchterman_reingold.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Solution Items\ImNodeSoup\ImNodeSoup.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Solution Items\ImNodeSoup\kamada_kawai.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Solution Items\ImNodeSoup\nodesoup.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\volard-pc\Downloads\imgui-docking\misc\cpp\imgui_stdlib.cpp">
+      <Filter>Source Files\imgui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="E:\Users\volard\OpenGL\includes\imgui\imstb_truetype.h">
@@ -97,6 +112,18 @@
     </ClInclude>
     <ClInclude Include="Includes\KHR\khrplatform.h">
       <Filter>Header Files\KHR</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Solution Items\ImNodeSoup\fruchterman_reingold.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Solution Items\ImNodeSoup\kamada_kawai.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Solution Items\ImNodeSoup\nodesoup.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\volard-pc\Downloads\imgui-docking\misc\cpp\imgui_stdlib.h">
+      <Filter>Header Files\imgui</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
