--- a/Graphy/imgui.ini
+++ b/Graphy/imgui.ini
@@ -11,15 +11,30 @@ Size=458,178
 Collapsed=0
 
 [Window][NodeSoup]
-ViewportPos=382,282
-ViewportId=0x7E025615
-Size=800,600
+Pos=0,0
+Size=1680,1027
 Collapsed=0
+DockId=0x8B93E3BD,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1123,98
+ViewportPos=208,176
 ViewportId=0xE927CF2F
-Size=585,680
+Size=788,360
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=790,19
+Size=590,719
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpace Demo]
+Size=988,712
+Collapsed=0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1680,1027
 Collapsed=0
 
 [Table][0xDA36A7E0,6]
@@ -39,4 +54,10 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
+DockSpace     ID=0x3BC79352 Pos=260,157 Size=988,693 Split=X Selected=0xE87781F4
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=788,581 Split=Y Selected=0xE87781F4
+    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=788,360 CentralNode=1 HiddenTabBar=1 Selected=0x03BBCC4E
+    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=788,357 Selected=0x03BBCC4E
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=590,581 Selected=0x08F8367F
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1680,1027 CentralNode=1 Selected=0x03BBCC4E
 
