:fire: Code cleanup

--- a/Graphy/imgui.ini
+++ b/Graphy/imgui.ini
@@ -11,10 +11,10 @@ Size=458,178
 Collapsed=0
 
 [Window][NodeSoup]
-Pos=0,0
-Size=1680,1027
+ViewportPos=456,213
+ViewportId=0x7E025615
+Size=800,600
 Collapsed=0
-DockId=0x8B93E3BD,0
 
 [Window][Dear ImGui Demo]
 ViewportPos=208,176
@@ -34,7 +34,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1680,1027
+Size=800,600
 Collapsed=0
 
 [Table][0xDA36A7E0,6]
@@ -59,5 +59,5 @@ DockSpace     ID=0x3BC79352 Pos=260,157 Size=988,693 Split=X Selected=0xE87781F4
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=788,360 CentralNode=1 HiddenTabBar=1 Selected=0x03BBCC4E
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=788,357 Selected=0x03BBCC4E
   DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=590,581 Selected=0x08F8367F
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1680,1027 CentralNode=1 Selected=0x03BBCC4E
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=242,265 Size=800,600 CentralNode=1
 
