--- a/Graphy/imgui.ini
+++ b/Graphy/imgui.ini
@@ -11,16 +11,15 @@ Size=458,178
 Collapsed=0
 
 [Window][NodeSoup]
-ViewportPos=163,250
-ViewportId=0x7E025615
-Size=800,600
+Pos=0,0
+Size=1046,800
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=208,176
-ViewportId=0xE927CF2F
-Size=788,360
+Size=1300,800
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Example: Simple layout]
 Pos=790,19
@@ -34,8 +33,14 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=800,600
+Size=1300,800
 Collapsed=0
+
+[Window][NodeSoupSettings]
+Pos=1048,0
+Size=252,800
+Collapsed=0
+DockId=0x00000006,0
 
 [Table][0xDA36A7E0,6]
 RefScale=13
@@ -59,5 +64,7 @@ DockSpace     ID=0x3BC79352 Pos=260,157 Size=988,693 Split=X Selected=0xE87781F4
     DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=788,360 CentralNode=1 HiddenTabBar=1 Selected=0x03BBCC4E
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=788,357 Selected=0x03BBCC4E
   DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=590,581 Selected=0x08F8367F
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=164,187 Size=800,600 CentralNode=1 Selected=0x03BBCC4E
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=102,118 Size=1300,800 Split=X Selected=0x03BBCC4E
+  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=1046,800 CentralNode=1 HiddenTabBar=1 Selected=0x03BBCC4E
+  DockNode    ID=0x00000006 Parent=0x8B93E3BD SizeRef=252,800 HiddenTabBar=1 Selected=0x6C5677B2
 
