--- a/Graphy/imgui.ini
+++ b/Graphy/imgui.ini
@@ -1,7 +1,7 @@
 [Window][Debug##Default]
-ViewportPos=276,299
+ViewportPos=1130,444
 ViewportId=0x9F5F46A1
-Size=400,400
+Size=1205,743
 Collapsed=0
 
 [Window][Hello, world!]
@@ -11,15 +11,15 @@ Size=458,178
 Collapsed=0
 
 [Window][NodeSoup]
-Pos=0,0
-Size=1046,800
+Pos=0,401
+Size=1046,398
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000008,0
 
 [Window][Dear ImGui Demo]
 Size=1300,800
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Example: Simple layout]
 Pos=790,19
@@ -38,9 +38,26 @@ Collapsed=0
 
 [Window][NodeSoupSettings]
 Pos=1048,0
-Size=252,800
+Size=252,799
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][ImPlot Demo]
+Size=1300,800
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Plot]
+Pos=0,0
+Size=1003,800
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][PlotSettings]
+Pos=1005,0
+Size=295,800
+Collapsed=0
+DockId=0x0000000A,0
 
 [Table][0xDA36A7E0,6]
 RefScale=13
@@ -58,13 +75,38 @@ Column 1  Width=42
 Column 2  Width=42
 Column 3  Weight=1.0000
 
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x82CBB907,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x49D11DC0,3]
+RefScale=13
+Column 0  Width=86
+Column 1  Width=86
+Column 2  Width=86
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=260,157 Size=988,693 Split=X Selected=0xE87781F4
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=788,581 Split=Y Selected=0xE87781F4
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=788,360 CentralNode=1 HiddenTabBar=1 Selected=0x03BBCC4E
-    DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=788,357 Selected=0x03BBCC4E
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=590,581 Selected=0x08F8367F
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=102,118 Size=1300,800 Split=X Selected=0x03BBCC4E
-  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=1046,800 CentralNode=1 HiddenTabBar=1 Selected=0x03BBCC4E
-  DockNode    ID=0x00000006 Parent=0x8B93E3BD SizeRef=252,800 HiddenTabBar=1 Selected=0x6C5677B2
+DockSpace       ID=0x3BC79352 Pos=260,157 Size=988,693 Split=X Selected=0xE87781F4
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=788,581 Split=Y Selected=0xE87781F4
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=788,360 CentralNode=1 HiddenTabBar=1 Selected=0x03BBCC4E
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=788,357 Selected=0x03BBCC4E
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=590,581 Selected=0x08F8367F
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=67,139 Size=1300,800 Split=X Selected=0x03BBCC4E
+  DockNode      ID=0x00000009 Parent=0x8B93E3BD SizeRef=1003,800 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000009 SizeRef=1046,800 Split=Y
+      DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=1046,400 CentralNode=1 HiddenTabBar=1 Selected=0x216029FA
+      DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=1046,398 Selected=0x03BBCC4E
+    DockNode    ID=0x00000006 Parent=0x00000009 SizeRef=252,800 Selected=0x6C5677B2
+  DockNode      ID=0x0000000A Parent=0x8B93E3BD SizeRef=295,800 HiddenTabBar=1 Selected=0xAC8AB6D7
 
